<resources>
    <string name="app_name">

        AndroKado</string>
    <string name="nom_article">Pain au chocolat</string>
    <string name="prix">1,0</string>
    <string name="euro">€</string>
    <string name="designation">Une viennoiserie au beurre et au chocolat.</string>
    <string name="text_button">Acheté</string>
    <string name="toggleButton_achete">Acheté</string>
    <string name="toggleButton_a_acheter">A acheter</string>
    <string name="isAchete">True/False</string>
</resources>