<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoArticle"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_info_article"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/design_default_color_primary"
        app:title="AndroKado"
        />

    <TextView
        android:id="@+id/textView_nomArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/nom_article"

        android:textAppearance="@style/TextAppearance.AppCompat.Title"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_info_article" />

    <TextView
        android:id="@+id/textView_prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prix"

        app:layout_constraintLeft_toLeftOf="@id/textView_nomArticle"
        app:layout_constraintTop_toBottomOf="@id/textView_nomArticle" />



    <TextView
        android:id="@+id/textView_designation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designation"

        android:textSize="12sp"

        app:layout_constraintLeft_toLeftOf="@id/textView_prix"
        app:layout_constraintTop_toBottomOf="@id/textView_prix" />




    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:isIndicator="true"

        android:numStars="4"
        android:rating="3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView_prix" />

    <ImageButton
        android:id="@+id/button_planete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickPlanet"
        android:src="@drawable/planete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tb_achete"


        app:layout_constraintWidth_percent=".5"
        android:contentDescription="TODO" />

    <ToggleButton
        android:id="@+id/tb_achete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textOff="@string/toggleButton_a_acheter"
        android:textOn="@string/toggleButton_achete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_planete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_planete"
        app:layout_constraintWidth_percent=".5"

        android:onClick="clickAcheter"
        />


    <Button

        android:id="@+id/edit_article_btn_delete"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="Supprimer article"
        android:textSize="10sp"

        android:onClick="deleteArticle"

        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_designation"
        />





</androidx.constraintlayout.widget.ConstraintLayout>